replace glyphicons with FontAwesome on picture.php, movde plugins to the end. Fixes Safari wrapping issue on MacOS

--- a/css/fixplugins.css
+++ b/css/fixplugins.css
@@ -115,8 +115,8 @@ ul#thumbnails .gthumb a img.thumbnail {
   line-height: none !important;
 }
 .pwg-icon-globe:before {
-  content:"\e135";
-  font-family:"Glyphicons Halflings";
+  content:""\f0ac"";
+  font-family:"FontAwesome";
 }
 
 /* BatchDownloader */
@@ -126,8 +126,8 @@ ul#thumbnails .gthumb a img.thumbnail {
   line-height: none !important;
 }
 .batch-downloader-icon:before {
-  content:"\e197";
-  font-family:"Glyphicons Halflings";
+  content:"\f0ed";
+  font-family:"FontAwesome";
 }
 
 /* User Collections */
@@ -187,9 +187,3 @@ ul.ui-autocomplete { z-index: 150; }
 
 /* Extended Description */
 ul.thumbnailCategories { padding-top: 20px; }
-
-/* RV Maps & Earth */
-.pwg-icon-map:before {
-  content: "\e135";
-  font-family: "Glyphicons Halflings";
-}
